namespace CourseProject.DataLayer.BusinessModels
{
    public enum Role
    {
        Admin,
        ContentManager,
        User
    }
}